--- a/.meta/requirements/requirements-base.txt
+++ b/.meta/requirements/requirements-base.txt
@@ -2,14 +2,30 @@
 #    uv export --no-hashes --no-group dev --no-group lint
 -e .
 importlib-metadata==8.5.0 ; python_full_version < '3.9'
+    # via typeguard
 jaxtyping==0.2.19 ; python_full_version < '3.9'
+    # via zanj
 jaxtyping==0.2.36 ; python_full_version == '3.9.*'
+    # via zanj
 jaxtyping==0.2.38 ; python_full_version >= '3.10'
+    # via zanj
 muutils==0.8.0
+    # via zanj
 numpy==1.24.4 ; python_full_version < '3.9'
+    # via
+    #   jaxtyping
+    #   zanj
 numpy==2.0.2 ; python_full_version == '3.9.*'
+    # via zanj
 numpy==2.2.3 ; python_full_version >= '3.10'
+    # via zanj
 typeguard==4.4.0 ; python_full_version < '3.9'
+    # via jaxtyping
 typing-extensions==4.12.2 ; python_full_version < '3.10'
+    # via
+    #   jaxtyping
+    #   typeguard
 wadler-lindig==0.1.3 ; python_full_version >= '3.10'
+    # via jaxtyping
 zipp==3.20.2 ; python_full_version < '3.9'
+    # via importlib-metadata
