--- a/.meta/requirements/requirements-groups.txt
+++ b/.meta/requirements/requirements-groups.txt
@@ -2,210 +2,653 @@
 #    uv export --no-hashes --group dev --group lint
 -e .
 anyio==4.5.2 ; python_full_version < '3.9'
+    # via
+    #   httpx
+    #   jupyter-server
 anyio==4.8.0 ; python_full_version >= '3.9'
+    # via
+    #   httpx
+    #   jupyter-server
 appnope==0.1.4 ; sys_platform == 'darwin'
+    # via
+    #   ipykernel
+    #   ipython
 argon2-cffi==23.1.0
+    # via jupyter-server
 argon2-cffi-bindings==21.2.0
+    # via argon2-cffi
 arrow==1.3.0
+    # via isoduration
 asttokens==3.0.0
+    # via stack-data
 astunparse==1.6.3 ; python_full_version < '3.9'
+    # via pdoc
 async-lru==2.0.4
+    # via jupyterlab
 attrs==25.1.0
+    # via
+    #   igittigitt
+    #   jsonschema
+    #   referencing
 babel==2.17.0
+    # via jupyterlab-server
 backcall==0.2.0 ; python_full_version < '3.9'
+    # via ipython
 backports-tarfile==1.2.0 ; python_full_version < '3.12' and platform_machine != 'ppc64le' and platform_machine != 's390x'
+    # via jaraco-context
 beautifulsoup4==4.13.3
+    # via nbconvert
 bleach==6.1.0 ; python_full_version < '3.9'
+    # via nbconvert
 bleach==6.2.0 ; python_full_version >= '3.9'
+    # via nbconvert
 bracex==2.5.post1 ; python_full_version >= '3.11'
+    # via wcmatch
 certifi==2025.1.31
+    # via
+    #   httpcore
+    #   httpx
+    #   requests
 cffi==1.17.1
+    # via
+    #   argon2-cffi-bindings
+    #   cryptography
+    #   pyzmq
 charset-normalizer==3.4.1
+    # via requests
 cli-exit-tools==1.2.7 ; python_full_version >= '3.11'
+    # via igittigitt
 click==8.1.8
+    # via
+    #   cli-exit-tools
+    #   igittigitt
+    #   typer
 colorama==0.4.6 ; sys_platform == 'win32'
+    # via
+    #   click
+    #   ipython
+    #   pytest
 comm==0.2.2
+    # via
+    #   ipykernel
+    #   ipywidgets
 contourpy==1.1.1 ; python_full_version < '3.9'
+    # via matplotlib
 contourpy==1.3.0 ; python_full_version == '3.9.*'
+    # via matplotlib
 contourpy==1.3.1 ; python_full_version >= '3.10'
+    # via matplotlib
 coverage==7.6.1 ; python_full_version < '3.9'
+    # via
+    #   coverage-badge
+    #   pytest-cov
 coverage==7.6.12 ; python_full_version >= '3.9'
+    # via
+    #   coverage-badge
+    #   pytest-cov
 coverage-badge==1.1.2
 cryptography==44.0.2 ; platform_machine != 'ppc64le' and platform_machine != 's390x' and sys_platform == 'linux'
+    # via secretstorage
 cycler==0.12.1
+    # via matplotlib
 debugpy==1.8.12
+    # via ipykernel
 decorator==5.1.1
+    # via ipython
 defusedxml==0.7.1
+    # via nbconvert
 docutils==0.20.1 ; python_full_version < '3.9'
+    # via readme-renderer
 docutils==0.21.2 ; python_full_version >= '3.9'
+    # via readme-renderer
 exceptiongroup==1.2.2 ; python_full_version < '3.11'
+    # via
+    #   anyio
+    #   ipython
+    #   pytest
 executing==2.2.0
+    # via stack-data
 fastjsonschema==2.21.1
+    # via nbformat
 fonttools==4.56.0
+    # via matplotlib
 fqdn==1.5.1
+    # via jsonschema
 h11==0.14.0
+    # via httpcore
 httpcore==1.0.7
+    # via httpx
 httpx==0.28.1
+    # via jupyterlab
 id==1.5.0
+    # via twine
 idna==3.10
+    # via
+    #   anyio
+    #   httpx
+    #   jsonschema
+    #   requests
 igittigitt==2.1.5 ; python_full_version >= '3.11'
+    # via lmcat
 importlib-metadata==8.5.0 ; python_full_version < '3.9'
+    # via
+    #   jupyter-client
+    #   jupyter-lsp
+    #   jupyterlab
+    #   jupyterlab-server
+    #   keyring
+    #   nbconvert
+    #   twine
+    #   typeguard
 importlib-metadata==8.6.1 ; (python_full_version >= '3.9' and python_full_version < '3.12' and platform_machine != 'ppc64le' and platform_machine != 's390x') or (python_full_version == '3.9.*' and platform_machine == 'ppc64le') or (python_full_version == '3.9.*' and platform_machine == 's390x')
+    # via
+    #   jupyter-client
+    #   jupyter-lsp
+    #   jupyterlab
+    #   jupyterlab-server
+    #   keyring
+    #   nbconvert
+    #   twine
 importlib-resources==6.4.5 ; python_full_version < '3.9'
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
+    #   jupyterlab
+    #   keyring
+    #   matplotlib
 importlib-resources==6.5.2 ; python_full_version == '3.9.*'
+    # via matplotlib
 iniconfig==2.0.0
+    # via pytest
 ipykernel==6.29.5
+    # via
+    #   jupyter
+    #   jupyter-console
+    #   jupyterlab
 ipython==8.12.3 ; python_full_version < '3.9'
+    # via
+    #   ipykernel
+    #   ipywidgets
+    #   jupyter-console
 ipython==8.18.1 ; python_full_version == '3.9.*'
+    # via
+    #   ipykernel
+    #   ipywidgets
+    #   jupyter-console
 ipython==8.32.0 ; python_full_version >= '3.10'
+    # via
+    #   ipykernel
+    #   ipywidgets
+    #   jupyter-console
 ipywidgets==8.1.5
+    # via jupyter
 isoduration==20.11.0
+    # via jsonschema
 jaraco-classes==3.4.0 ; platform_machine != 'ppc64le' and platform_machine != 's390x'
+    # via keyring
 jaraco-context==6.0.1 ; platform_machine != 'ppc64le' and platform_machine != 's390x'
+    # via keyring
 jaraco-functools==4.1.0 ; platform_machine != 'ppc64le' and platform_machine != 's390x'
+    # via keyring
 jaxtyping==0.2.19 ; python_full_version < '3.9'
+    # via zanj
 jaxtyping==0.2.36 ; python_full_version == '3.9.*'
+    # via zanj
 jaxtyping==0.2.38 ; python_full_version >= '3.10'
+    # via zanj
 jedi==0.19.2
+    # via ipython
 jeepney==0.9.0 ; platform_machine != 'ppc64le' and platform_machine != 's390x' and sys_platform == 'linux'
+    # via
+    #   keyring
+    #   secretstorage
 jinja2==3.1.6
+    # via
+    #   jupyter-server
+    #   jupyterlab
+    #   jupyterlab-server
+    #   nbconvert
+    #   pdoc
 json5==0.10.0
+    # via jupyterlab-server
 jsonpointer==3.0.0
+    # via jsonschema
 jsonschema==4.23.0
+    # via
+    #   jupyter-events
+    #   jupyterlab-server
+    #   nbformat
 jsonschema-specifications==2023.12.1 ; python_full_version < '3.9'
+    # via jsonschema
 jsonschema-specifications==2024.10.1 ; python_full_version >= '3.9'
+    # via jsonschema
 jupyter==1.1.1
 jupyter-client==8.6.3
+    # via
+    #   ipykernel
+    #   jupyter-console
+    #   jupyter-server
+    #   nbclient
 jupyter-console==6.6.3
+    # via jupyter
 jupyter-core==5.7.2
+    # via
+    #   ipykernel
+    #   jupyter-client
+    #   jupyter-console
+    #   jupyter-server
+    #   jupyterlab
+    #   nbclient
+    #   nbconvert
+    #   nbformat
 jupyter-events==0.10.0 ; python_full_version < '3.9'
+    # via jupyter-server
 jupyter-events==0.12.0 ; python_full_version >= '3.9'
+    # via jupyter-server
 jupyter-lsp==2.2.5
+    # via jupyterlab
 jupyter-server==2.14.2 ; python_full_version < '3.9'
+    # via
+    #   jupyter-lsp
+    #   jupyterlab
+    #   jupyterlab-server
+    #   notebook
+    #   notebook-shim
 jupyter-server==2.15.0 ; python_full_version >= '3.9'
+    # via
+    #   jupyter-lsp
+    #   jupyterlab
+    #   jupyterlab-server
+    #   notebook
+    #   notebook-shim
 jupyter-server-terminals==0.5.3
+    # via jupyter-server
 jupyterlab==4.3.5
+    # via
+    #   jupyter
+    #   notebook
 jupyterlab-pygments==0.3.0
+    # via nbconvert
 jupyterlab-server==2.27.3
+    # via
+    #   jupyterlab
+    #   notebook
 jupyterlab-widgets==3.0.13
+    # via ipywidgets
 keyring==25.5.0 ; python_full_version < '3.9' and platform_machine != 'ppc64le' and platform_machine != 's390x'
+    # via twine
 keyring==25.6.0 ; python_full_version >= '3.9' and platform_machine != 'ppc64le' and platform_machine != 's390x'
+    # via twine
 kiwisolver==1.4.7 ; python_full_version < '3.10'
+    # via matplotlib
 kiwisolver==1.4.8 ; python_full_version >= '3.10'
+    # via matplotlib
 lib-detect-testenv==2.0.8 ; python_full_version >= '3.11'
+    # via
+    #   cli-exit-tools
+    #   igittigitt
 libcst==1.1.0 ; python_full_version < '3.9'
+    # via pycln
 libcst==1.6.0 ; python_full_version >= '3.9'
+    # via pycln
 lmcat==0.2.0 ; python_full_version >= '3.11'
 markdown-it-py==3.0.0
+    # via rich
 markupsafe==2.1.5 ; python_full_version < '3.9'
+    # via
+    #   jinja2
+    #   nbconvert
+    #   pdoc
 markupsafe==3.0.2 ; python_full_version >= '3.9'
+    # via
+    #   jinja2
+    #   nbconvert
+    #   pdoc
 matplotlib==3.7.5 ; python_full_version < '3.9'
 matplotlib==3.9.4 ; python_full_version == '3.9.*'
 matplotlib==3.10.0 ; python_full_version >= '3.10'
 matplotlib-inline==0.1.7
+    # via
+    #   ipykernel
+    #   ipython
 mdurl==0.1.2
+    # via markdown-it-py
 mistune==3.1.1
+    # via nbconvert
 more-itertools==10.5.0 ; python_full_version < '3.9' and platform_machine != 'ppc64le' and platform_machine != 's390x'
+    # via
+    #   jaraco-classes
+    #   jaraco-functools
 more-itertools==10.6.0 ; python_full_version >= '3.9' and platform_machine != 'ppc64le' and platform_machine != 's390x'
+    # via
+    #   jaraco-classes
+    #   jaraco-functools
 muutils==0.8.0
+    # via
+    #   lmcat
+    #   zanj
 mypy==1.14.1 ; python_full_version < '3.9'
 mypy==1.15.0 ; python_full_version >= '3.9'
 mypy-extensions==1.0.0
+    # via
+    #   mypy
+    #   typing-inspect
 narwhals==1.26.0
+    # via plotly
 nbclient==0.10.1 ; python_full_version < '3.9'
+    # via nbconvert
 nbclient==0.10.2 ; python_full_version >= '3.9'
+    # via nbconvert
 nbconvert==7.16.6
+    # via
+    #   jupyter
+    #   jupyter-server
 nbformat==5.10.4
+    # via
+    #   jupyter-server
+    #   nbclient
+    #   nbconvert
 nest-asyncio==1.6.0
+    # via ipykernel
 nh3==0.2.21
+    # via readme-renderer
 notebook==7.3.2
+    # via jupyter
 notebook-shim==0.2.4
+    # via
+    #   jupyterlab
+    #   notebook
 numpy==1.24.4 ; python_full_version < '3.9'
+    # via
+    #   contourpy
+    #   jaxtyping
+    #   matplotlib
+    #   zanj
 numpy==2.0.2 ; python_full_version == '3.9.*'
+    # via
+    #   contourpy
+    #   matplotlib
+    #   zanj
 numpy==2.2.3 ; python_full_version >= '3.10'
+    # via
+    #   contourpy
+    #   matplotlib
+    #   zanj
 overrides==7.7.0
+    # via jupyter-server
 packaging==24.2
+    # via
+    #   ipykernel
+    #   jupyter-events
+    #   jupyter-server
+    #   jupyterlab
+    #   jupyterlab-server
+    #   matplotlib
+    #   nbconvert
+    #   plotly
+    #   pytest
+    #   twine
 pandocfilters==1.5.1
+    # via nbconvert
 parso==0.8.4
+    # via jedi
 pathspec==0.12.1
+    # via pycln
 pdoc==14.7.0 ; python_full_version < '3.9'
 pdoc==15.0.1 ; python_full_version >= '3.9'
 pexpect==4.9.0 ; (python_full_version < '3.10' and sys_platform == 'emscripten') or (sys_platform != 'emscripten' and sys_platform != 'win32')
+    # via ipython
 pickleshare==0.7.5 ; python_full_version < '3.9'
+    # via ipython
 pillow==10.4.0 ; python_full_version < '3.9'
+    # via matplotlib
 pillow==11.1.0 ; python_full_version >= '3.9'
+    # via matplotlib
 pkgutil-resolve-name==1.3.10 ; python_full_version < '3.9'
+    # via jsonschema
 platformdirs==4.3.6
+    # via jupyter-core
 plotly==6.0.0
 pluggy==1.5.0
+    # via pytest
 prometheus-client==0.21.1
+    # via jupyter-server
 prompt-toolkit==3.0.50
+    # via
+    #   ipython
+    #   jupyter-console
 psutil==7.0.0
+    # via ipykernel
 ptyprocess==0.7.0 ; (python_full_version < '3.10' and sys_platform == 'emscripten') or os_name != 'nt' or (sys_platform != 'emscripten' and sys_platform != 'win32')
+    # via
+    #   pexpect
+    #   terminado
 pure-eval==0.2.3
+    # via stack-data
 pycln==2.5.0
 pycparser==2.22
+    # via cffi
 pygments==2.19.1
+    # via
+    #   ipython
+    #   jupyter-console
+    #   nbconvert
+    #   pdoc
+    #   readme-renderer
+    #   rich
 pyparsing==3.1.4 ; python_full_version < '3.9'
+    # via matplotlib
 pyparsing==3.2.1 ; python_full_version >= '3.9'
+    # via matplotlib
 pytest==8.3.4
+    # via pytest-cov
 pytest-cov==5.0.0 ; python_full_version < '3.9'
 pytest-cov==6.0.0 ; python_full_version >= '3.9'
 python-dateutil==2.9.0.post0
+    # via
+    #   arrow
+    #   jupyter-client
+    #   matplotlib
 python-json-logger==3.2.1
+    # via jupyter-events
 pytz==2025.1 ; python_full_version < '3.9'
+    # via babel
 pywin32==308 ; platform_python_implementation != 'PyPy' and sys_platform == 'win32'
+    # via jupyter-core
 pywin32-ctypes==0.2.3 ; platform_machine != 'ppc64le' and platform_machine != 's390x' and sys_platform == 'win32'
+    # via keyring
 pywinpty==2.0.14 ; python_full_version < '3.9' and os_name == 'nt'
+    # via
+    #   jupyter-server
+    #   jupyter-server-terminals
+    #   terminado
 pywinpty==2.0.15 ; python_full_version >= '3.9' and os_name == 'nt'
+    # via
+    #   jupyter-server
+    #   jupyter-server-terminals
+    #   terminado
 pyyaml==6.0.2
+    # via
+    #   jupyter-events
+    #   libcst
+    #   pycln
 pyzmq==26.2.1
+    # via
+    #   ipykernel
+    #   jupyter-client
+    #   jupyter-console
+    #   jupyter-server
 readme-renderer==43.0 ; python_full_version < '3.9'
+    # via twine
 readme-renderer==44.0 ; python_full_version >= '3.9'
+    # via twine
 referencing==0.35.1 ; python_full_version < '3.9'
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
+    #   jupyter-events
 referencing==0.36.2 ; python_full_version >= '3.9'
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
+    #   jupyter-events
 requests==2.32.3
+    # via
+    #   id
+    #   jupyterlab-server
+    #   requests-toolbelt
+    #   twine
 requests-toolbelt==1.0.0
+    # via twine
 rfc3339-validator==0.1.4
+    # via
+    #   jsonschema
+    #   jupyter-events
 rfc3986==2.0.0
+    # via twine
 rfc3986-validator==0.1.1
+    # via
+    #   jsonschema
+    #   jupyter-events
 rich==13.9.4
+    # via
+    #   twine
+    #   typer
 rpds-py==0.20.1 ; python_full_version < '3.9'
+    # via
+    #   jsonschema
+    #   referencing
 rpds-py==0.22.3 ; python_full_version >= '3.9'
+    # via
+    #   jsonschema
+    #   referencing
 ruff==0.9.6
 secretstorage==3.3.3 ; platform_machine != 'ppc64le' and platform_machine != 's390x' and sys_platform == 'linux'
+    # via keyring
 send2trash==1.8.3
+    # via jupyter-server
 setuptools==75.3.0 ; python_full_version < '3.9'
+    # via
+    #   coverage-badge
+    #   jupyterlab
 setuptools==75.8.0 ; python_full_version >= '3.9'
+    # via
+    #   coverage-badge
+    #   jupyterlab
 shellingham==1.5.4
+    # via typer
 six==1.17.0
+    # via
+    #   astunparse
+    #   bleach
+    #   python-dateutil
+    #   rfc3339-validator
 sniffio==1.3.1
+    # via anyio
 soupsieve==2.6
+    # via beautifulsoup4
 stack-data==0.6.3
+    # via ipython
 terminado==0.18.1
+    # via
+    #   jupyter-server
+    #   jupyter-server-terminals
 tinycss2==1.2.1 ; python_full_version < '3.9'
+    # via bleach
 tinycss2==1.4.0 ; python_full_version >= '3.9'
+    # via bleach
 tomli==2.2.1 ; python_full_version <= '3.11'
+    # via
+    #   coverage
+    #   jupyterlab
+    #   mypy
+    #   pytest
 tomlkit==0.13.2
+    # via pycln
 tornado==6.4.2
+    # via
+    #   ipykernel
+    #   jupyter-client
+    #   jupyter-server
+    #   jupyterlab
+    #   notebook
+    #   terminado
 traitlets==5.14.3
+    # via
+    #   comm
+    #   ipykernel
+    #   ipython
+    #   ipywidgets
+    #   jupyter-client
+    #   jupyter-console
+    #   jupyter-core
+    #   jupyter-events
+    #   jupyter-server
+    #   jupyterlab
+    #   matplotlib-inline
+    #   nbclient
+    #   nbconvert
+    #   nbformat
 twine==6.1.0
 typeguard==4.4.0 ; python_full_version < '3.9'
+    # via jaxtyping
 typer==0.15.1
+    # via pycln
 types-python-dateutil==2.9.0.20241206
+    # via arrow
 typing-extensions==4.12.2
+    # via
+    #   anyio
+    #   async-lru
+    #   beautifulsoup4
+    #   ipython
+    #   jaxtyping
+    #   libcst
+    #   mistune
+    #   mypy
+    #   python-json-logger
+    #   referencing
+    #   rich
+    #   typeguard
+    #   typer
+    #   typing-inspect
 typing-inspect==0.9.0 ; python_full_version < '3.9'
+    # via libcst
 uri-template==1.3.0
+    # via jsonschema
 urllib3==2.2.3 ; python_full_version < '3.9'
+    # via
+    #   requests
+    #   twine
 urllib3==2.3.0 ; python_full_version >= '3.9'
+    # via
+    #   requests
+    #   twine
 wadler-lindig==0.1.3 ; python_full_version >= '3.10'
+    # via jaxtyping
 wcmatch==10.0 ; python_full_version >= '3.11'
+    # via igittigitt
 wcwidth==0.2.13
+    # via prompt-toolkit
 webcolors==24.8.0 ; python_full_version < '3.9'
+    # via jsonschema
 webcolors==24.11.1 ; python_full_version >= '3.9'
+    # via jsonschema
 webencodings==0.5.1
+    # via
+    #   bleach
+    #   tinycss2
 websocket-client==1.8.0
+    # via jupyter-server
 wheel==0.45.1 ; python_full_version < '3.9'
+    # via astunparse
 widgetsnbextension==4.0.13
+    # via ipywidgets
 zipp==3.20.2 ; python_full_version < '3.9'
+    # via
+    #   importlib-metadata
+    #   importlib-resources
 zipp==3.21.0 ; (python_full_version >= '3.9' and python_full_version < '3.12' and platform_machine != 'ppc64le' and platform_machine != 's390x') or (python_full_version == '3.9.*' and platform_machine == 'ppc64le') or (python_full_version == '3.9.*' and platform_machine == 's390x')
+    # via
+    #   importlib-metadata
+    #   importlib-resources
